syntax = "proto3";
package rollkitsdk.sequencer.v1;

import "amino/amino.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/rollkit/go-execution-abci/modules/sequencer/types";

// GenesisState defines the gm module's genesis state.
message GenesisState {
  repeated Sequencer sequencers = 2
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];
}

// Sequencer defines a sequence of instructions to be executed.
message Sequencer {
  // name is the human-readable name of the sequence.
  string name = 1;

  // consensus_pubkey is the consensus public key of the sequencer, as a
  // Protobuf Any.
  google.protobuf.Any consensus_pubkey = 2
      [ (cosmos_proto.accepts_interface) = "cosmos.crypto.PubKey" ];
}

// SequencerChanges defines a sequence of instructions to be executed.
message SequencerChanges {
  // block height that trigger the change sequencer
  uint64 block_height = 1;
  // sequencers is the list pubkey that will become new sequencers.
  repeated Sequencer sequencers = 2
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];
}